--- a/Coinbase Ventures - FlatCoin Work.ipynb
+++ b/Coinbase Ventures - FlatCoin Work.ipynb
@@ -227,7 +227,56 @@
    "id": "a6beaf36",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "ticker = \"AAPL\"\n",
+    "data = yf.download(ticker, start=\"2020-01-01\", end=\"2020-12-31\")\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05183e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from alpha_vantage.timeseries import TimeSeries\n",
+    "\n",
+    "ts = TimeSeries(key='YOUR_API_KEY', output_format='pandas')\n",
+    "data, meta_data = ts.get_daily(symbol='MSFT', outputsize='full')\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a596b0e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import quandl\n",
+    "\n",
+    "quandl.ApiConfig.api_key = \"YOUR_API_KEY\"\n",
+    "data = quandl.get(\"WIKI/AAPL\", start_date=\"2020-01-01\", end_date=\"2020-12-31\")\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ca963e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://cloud.iexapis.com/stable/stock/aapl/chart/1y?token=YOUR_API_TOKEN\"\n",
+    "response = requests.get(url)\n",
+    "data = response.json()\n",
+    "print(data)"
+   ]
   }
  ],
  "metadata": {
